<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_1"
        android:enabled="true"
        android:icon="@drawable/ic_home_24"
        android:title="@string/menuitemhomelabel"/>
    <item
        android:id="@+id/item_2"
        android:enabled="true"
        android:icon="@drawable/ic_add_24dp"
        android:title="@string/menuitemaddlabel"/>
    <item
        android:id="@+id/item_3"
        android:enabled="true"
        android:icon="@drawable/ic_query_stats_24"
        android:title="@string/menuitemstatisticslabel"/>
    <item
        android:id="@+id/item_4"
        android:enabled="true"
        android:icon="@drawable/ic_logout_24"
        android:title="@string/menuitemlogoutlabel"/>
</menu>