<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:text="@string/Report"
        android:textSize="25sp"
      />

    <TextView
        android:id="@+id/tvTotalProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_projects"
        android:textSize="18sp"
      />

    <TextView
        android:id="@+id/tvCompletedProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_projects"
        android:textSize="18sp"
       />

    <TextView
        android:id="@+id/tvInProgressProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress_projects"
        android:textSize="18sp"
     />

    <TextView
        android:id="@+id/tvNotStartedProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_started_projects"
        android:textSize="18sp"
       />


</LinearLayout>