<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity">

    <TextView
        android:id="@+id/tvTotalProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_projects"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCompletedProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_projects"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTotalProjects" />

    <TextView
        android:id="@+id/tvInProgressProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_progress_projects"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCompletedProjects" />

    <TextView
        android:id="@+id/tvNotStartedProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_started_projects"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInProgressProjects" />


</androidx.constraintlayout.widget.ConstraintLayout>
